k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  selector:
    app: customer-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
